All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/SM_Checklist_Result__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object holds the results of the transposed checklist data for reporting purpose.</description>
    <label>Checklist Result</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>