All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Answer__c.field-meta.xml
<CustomField>
    <fullName>SM_Answer__c</fullName>
    <description>Field to store the answer to the question</description>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>