All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Checklist__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Checklist Object</description>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>