All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist_Name__c</fullName>
    <description>Field to store the Checklist Process Name</description>
    <label>Checklist Name</label>
    <type>TextArea</type>
</CustomField>