All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>SM_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store the user Id of the user who completed the checklist</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>