All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Parts_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the look up to Parts Order Object</description>
    <label>Parts Order</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>