All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the look up to Product object</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>