All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Question__c.field-meta.xml
<CustomField>
    <fullName>SM_Question__c</fullName>
    <description>Field to store the question text</description>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>