All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Question_Number__c</fullName>
    <description>Field to store the Question ID</description>
    <label>Question Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>