All_Component_DX/force-app/main/default/objects/SM_Checklist_Result__c/fields/SM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is look up to Work Order</description>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Checklist Results</relationshipLabel>
    <relationshipName>Checklist_Results</relationshipName>
    <type>Lookup</type>
</CustomField>